k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mosbot
  labels:
    name: mosbot
    project: homelab
