k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosbot-dashboard
  namespace: mosbot
  labels:
    app: mosbot-dashboard
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: mosbot-dashboard
